# covid-19-applet

./: .gitignore  LICENSE  README.md  pyproject.toml  server.py
src/main/python/: readers.py
src/main/python/c19_app/: plot.py  reader.py  security.py
src/main/scripts/: vm_startup_script.sh
static/config/: plot_layout.json
static/css/: style.css
static/js/: sliderBubble.js
static/texts/: about.rst  links.rst  logs.rst  page_header.rst  tech_details.rst
templates/: index.html
