[tool.poetry]
name = "covid-19-applet"
version = "0.0.1"
description = ""
authors = ["Emeric <emeric.dynomant@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1, <3.7"
numpy = "^1.18.4"
pandas = "^1.0.3"
plotly = "^4.6.0"
flask = "^1.1.2"
flask_caching = "^1.8.0"
sklearn = "^0.0"
dataclasses = "^0.7"
c19 = {git = "https://github.com/MrMimic/covid-19-kaggle"}
pyarrow = "^0.17.0"
anyconfig = "^0.9.11"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
autopep8 = "^1.5.2"
